--- a/KwetterMonitor/src/kwettermonitor/resources/KwetterMonitorView.properties
+++ b/KwetterMonitor/src/kwettermonitor/resources/KwetterMonitorView.properties
@@ -33,3 +33,5 @@ StatusBar.busyIcons[14] = busyicons/busy-icon14.png
 jLabel1.text=See what people say about?
 jTextField1.text=
 jButton1.text=Search
+searchTweets.Action.shortDescription=
+searchTweets.Action.text=
